<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".Aop">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/titreAop"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:background="#00BCD4"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/calculAop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/inputAopVolt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#9C27B0"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/inputAopVin"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputAop2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#9C27B0"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/inputAop1"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinnerAop1"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#9C27B0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.701"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titre" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputAop3"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="#9C27B0"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/inputAop2"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinnerAop2"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#9C27B0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.701"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titre" />

        </LinearLayout>

        <EditText
            android:id="@+id/outputAopCalcul"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:ems="10"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/outputAop"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/calculAop"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/actionAop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="350dp"
        android:layout_height="141dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/aop" />

</androidx.constraintlayout.widget.ConstraintLayout>